--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     Hi! I am Pinkesh.
+    Recently I had completed my B.Tech from Chameli Devi Group of Institutions, Indore.
+    I also completed my schooling from Shri Vaishnav Academy, Indore.
+    I love to play football and do painting.
 </body>
 </html>
