update details of project

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     Recently I had completed my B.Tech from Chameli Devi Group of Institutions, Indore.<br>
     I also completed my schooling from Shri Vaishnav Academy, Indore.<br>
     I love to play football and do painting.
+
+    I have worked on few CLI apps. I'll show it here tomorrow.
+    
 </body>
 </html>
