update: friends name

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     I have worked on few CLI apps. I'll show it here tomorrow.<br>
     I got best artist award of year 2017-18 in my school and also I had participated in national level event called 
     Efficycle 2019  during my college academics in which my team secured AIR-3 and won the prize money of 75k.
+    my bestfriend is janvi.
     
 </body>
 </html>
